[gd_scene load_steps=4 format=3 uid="uid://bluvtptda08em"]

[ext_resource type="Texture2D" uid="uid://c6m244ohdd81h" path="res://tiles/hexes/forest_new_cut.png" id="1_ahreh"]
[ext_resource type="Script" path="res://tile.gd" id="2_qkqa7"]
[ext_resource type="PackedScene" uid="uid://6gdleu73nefl" path="res://tower.tscn" id="3_0o3sd"]

[node name="Tile" type="TextureButton"]
modulate = Color(1.50196, 1.50196, 1.50196, 1)
offset_left = -64.0
offset_top = -51.0
offset_right = 64.0
offset_bottom = 82.0
scale = Vector2(1, 0.802171)
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource("1_ahreh")
stretch_mode = 3
script = ExtResource("2_qkqa7")

[node name="Tower" parent="." instance=ExtResource("3_0o3sd")]
position = Vector2(66, 24)
offset = Vector2(2.08165e-12, 2.08165e-12)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="draw" from="Tower" to="." method="_on_tower_draw"]
[connection signal="hidden" from="Tower" to="." method="_on_tower_hidden"]
[connection signal="on_tower_destroyed" from="Tower" to="." method="delete_tower"]
